--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
@@ -17,6 +18,7 @@
     "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
+    "push-dir": "^0.4.1",
     "sass": "^1.64.1",
     "sass-loader": "10"
   }
